--- a/src/index.css
+++ b/src/index.css
@@ -45,9 +45,9 @@ body {
     margin-left: 0;
 }
 
-.markdown code {
-    background-color: #656565;
-    padding: 2px 4px;
+.markdown pre {
+    background-color: #393939;
+    padding: 8px 12px;
     border-radius: 4px;
 }
 
